2006-08-25  Brian Warner  <warner@lothar.com>

	* buildbot/status/mail.py (MailNotifier.__init__): fix typo in docs

	* buildbot/process/step.py (LoggingBuildStep.startCommand): set up
	all logfiles= in startCommand(), rather than in start() . This
	makes it easier to have the 'stdio' log come before any secondary
	logfiles, which I feel makes the waterfall display more
	understandable.
	(LoggingBuildStep.setupLogfiles): move the addLog/cmd.useLog code
	from ShellCommand up into LoggingBuildStep
	(LoggingBuildStep.__init__): move the handling of logfiles= from
	ShellCommand up to LoggingBuildStep, because startCommand is
	provided by LoggingBuildStep, whereas start() was specific to
	subclasses like ShellCommand and Source. This removes code
	duplication in those subclasses.
	(ShellCommand.__init__): same
	(ShellCommand.checkForOldSlaveAndLogfiles): split out the check
	for a slave that's too old to understand logfiles= into a separate
	method, so it can live in ShellCommand. The rest of
	setupLogfiles() can live in LoggingBuildStep.

2006-08-24  Brian Warner  <warner@lothar.com>

	* buildbot/locks.py (BaseLock): you can now configure Locks to
	allow multiple simultaneous owners. They still default to
	maxCount=1. Fixes SF#1434997. Thanks to James Knight (foom) for
	the patch.
	* docs/buildbot.texinfo (Interlocks): document the new options
	* buildbot/test/test_locks.py: add a bunch of new unit tests
	* buildbot/process/base.py (Build.acquireLocks): locks now offer
	waitUntilMaybeAvailable, not waitUntilAvailable
	* buildbot/process/step.py (BuildStep.acquireLocks): same
	* buildbot/master.py (BotMaster.getLockByID): real locks now use
	the whole lockid in their constructor, not just the name. Also,
	keep track of which real locks we've handed out by the full
	lockid, not just class+name, otherwise changing just the maxCount=
	in the master.cfg file would not actually cause a behavioral
	change

2006-08-23  Brian Warner  <warner@lothar.com>
