@@ -1,3 +1,9 @@
+2006-08-26  Brian Warner  <warner@lothar.com>
+
+	* buildbot/test/test_locks.py (Unit.testLater): make the tests
+	compatible with twisted-1.3.0, for some reason I just can't seem
+	to let go of the past.
+
 2006-08-25  Brian Warner  <warner@lothar.com>
 
 	* buildbot/status/mail.py (MailNotifier.__init__): fix typo in docs
